# hyperspectral-soil

./: .gitignore  README.md  pyproject.toml
data/interim/: X_test.txt  X_train.txt  y_train.txt
data/raw/: readme.md
notebooks/: 01_exploratory.ipynb  02_dimensionality_reduction.ipynb  starter_pack.ipynb
outputs/: 20231111121734.csv  20231112144219.csv
scripts/: drf.R
src/: example_ngboost.py  example_yaml_conf.py  model.py  model3.py  model4.py  preprocess.py  tuning.py  tuning4.py  utils.py
src/conf/: tuned_ngb.yaml
